--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,7 @@ nav a:first-child {
 #main-container {
   padding-top: 110px;
   min-height: calc(100vh - 70px);
+  border: 1px solid red;
 }
 
 .main-section {
@@ -110,6 +111,8 @@ nav a:first-child {
   margin: 0 0 40px;
   background: #ffffff;
   border: 1px solid #dddddd;
+  border: 1px solid blue;
+
 }
 
 .auth-image {
@@ -118,6 +121,7 @@ nav a:first-child {
   height: auto;
   margin-top: 10px;
   margin-right: 25px;
+  border: 1px solid green;
 }
 
 /* footer */
@@ -149,6 +153,7 @@ h3, h2 {
   width: 274px;
   margin: 20px 0 25px;
   overflow: auto;
+  border: 1px solid green;
 }
 
 .work:nth-child(even) {
@@ -159,6 +164,7 @@ h3, h2 {
   width: 100%;
   border: 0 none;
   opacity: 0.8;
+  border: 1px solid red;
 }
 
 .work h3 {
@@ -261,4 +267,13 @@ input[type=submit] {
     float: none;
     width: 100%;
   }
+  .work {
+    float: none;
+  }
+
+  .work img {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
 }
