--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ h2, h3 {
 
 #logo {
   float: left;
-  width: 250px;
+  width: 350px;
   height: 90px;
   font-family: Georgia, Times, "Times New Roman", serif;
   font-size: 30px;
@@ -182,8 +182,11 @@ h3, h2 {
 
 /* contact page */
 
+
+
 #contact-form ul {
   margin-bottom: 20px;
+  /* border: 2px solid red */
 }
 
 #contact-form li {
@@ -200,6 +203,7 @@ input[type=text], input[type=email], textarea {
   padding: 0 10px;
   font-size: 14px;
   border: 1px solid #dddddd;
+  /* border: 2px solid red; */
 }
 
 textarea {
@@ -274,6 +278,10 @@ input[type=submit] {
   .work img {
     margin-left: auto;
     margin-right: auto;
+  }
+  input[type=text], input[type=email], textarea {
+    margin-right: 10px;
+    /* border: 2px solid red; */
   }
   
 }
